--- a/cnki/analyse/templates/analyse/header.html
+++ b/cnki/analyse/templates/analyse/header.html
@@ -1,12 +1,27 @@
 {% load static %}
 
-<link rel="stylesheet" href="{% static "css/style.css" %}">
-<div class="nav" id="myNav">
-    <a href="#">
-        <img class="logo" src="{% static "img/logo.png" %}" alt="logo">
-    </a>
-    <a href="#">首页</a>
-    <a href="#">论文查找</a>
-    <a href="#">数据分析</a>
-    <a href="{% url 'spider' %}">在线爬虫</a>
-</div>
+<link rel="stylesheet" href="{% static "css/header.css" %}">
+<header id="header">
+        <div class="navbar navbar-inverse" role="banner">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">
+                    	<h1><img src="{% static "img/logo.png" %}" alt="logo"></h1>
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="index.html">主页</a></li>
+                        <li><a href="#">在线数据分析<i class="fa fa-angle-down"></i></a>
+                        </li>
+                        <li><a href="#">论文查找<i class="fa fa-angle-down"></i></a>
+
+                        </li>
+                        <li><a href="{% url 'spider' %}">在线爬虫<i class="fa fa-angle-down"></i></a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </header>
