--- a/cnki/analyse/templates/analyse/footer.html
+++ b/cnki/analyse/templates/analyse/footer.html
@@ -56,6 +56,7 @@
 
 <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="{% static 'js/bootstrap.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'js/isotope.pkgd.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'js/wow.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/jquery.countTo.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/wow.min.js' %}"></script>
