--- a/cnki/analyse/templates/analyse/index.html
+++ b/cnki/analyse/templates/analyse/index.html
@@ -91,14 +91,16 @@
                 </div>
                 <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
                     <h2>知网大数据</h2>
-                    <P>通过智能的在线爬虫，实时抓取特定的论文信息，实时针对数据在线分析，快速了解某个领域</P>
+                    <P>通过智能的在线爬虫，实时抓取特定的论文信息，实时针对数据在线分析，快速了解某个领域。同时系统支持在线查找，可查找具体的作者，
+                        学校，论文。实现到点的分析。</P>
                 </div>
             </div>
             <div class="single-features">
                 <div class="col-sm-6 col-sm-offset-1 align-right wow fadeInLeft" data-wow-duration="500ms"
                      data-wow-delay="300ms">
                     <h2>可视化图表</h2>
-                    <P>精准的可视化数据图表，让数据一览无余，找出数据背后的价值.提供多样式的表格数据展示，满足多种数据阅读需要,支持灵活地筛选需要观察的数据</P>
+                    <P>精准的可视化数据图表，让数据一览无余，找出数据背后的价值.提供多样式的表格数据展示，满足多种数据阅读需要,
+                        支持灵活地筛选需要观察的数据</P>
                 </div>
                 <div class="col-sm-5 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
                     <img src="{% static 'img/home/chart.png' %}" class="img-responsive imgBorder" alt="">
