--- a/cnki/analyse/templates/analyse/startSpider.html
+++ b/cnki/analyse/templates/analyse/startSpider.html
@@ -41,10 +41,7 @@
                         <div class="single-blog timeline">
                             <div class="post-content overflow">
                                 <h2 class="post-title bold"><p>输入关键词</p></h2>
-                                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
-                                    consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et
-                                    iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore
-                                    te feugait nulla facilisi. Nam liber [...]</p>
+                                <p>在输入框内输入你要抓取的的相关的关键字，例如大数据，然后回车或者点击开启爬虫按钮。</p>
                             </div>
                         </div>
                     </div>
@@ -53,10 +50,7 @@
                         <div class="single-blog timeline">
                             <div class="post-content overflow">
                                 <h2 class="post-title bold"><p>等待数据爬取</a></h2>
-                                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
-                                    consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et
-                                    iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore
-                                    te feugait nulla facilisi. Nam liber [...]</p>
+                                <p>提示爬虫已经启动，然后等待10秒钟，等待系统连接到知网，此时可以实现查看爬取的进度和爬取的相关论文。</p>
                             </div>
                         </div>
                     </div>
@@ -65,10 +59,8 @@
                         <div class="single-blog timeline">
                             <div class="post-content overflow">
                                 <h2 class="post-title bold"><p>点击数据分析</a></h2>
-                                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
-                                    consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et
-                                    iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore
-                                    te feugait nulla facilisi. Nam liber [...]</p>
+                                <p>等待数据爬取结束之后可以点击进入实时数据分析界面，当然您也可以跳过前面的两步，直接进入实时分析界面，选择系统提供
+                                    的数据</p>
                             </div>
                         </div>
                     </div>
@@ -77,10 +69,7 @@
                         <div class="single-blog timeline">
                             <div class="post-content overflow">
                                 <h2 class="post-title bold"><p>数据下载</a></h2>
-                                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
-                                    consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et
-                                    iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore
-                                    te feugait nulla facilisi. Nam liber [...]</p>
+                                <p>本系统支持原始数据的下载，可以将图表以图片的形式下载，当然也可以选择导出原始数据并进行下载。</p>
                             </div>
                         </div>
                     </div>
