--- a/cnki/analyse/templates/analyse/header.html
+++ b/cnki/analyse/templates/analyse/header.html
@@ -5,24 +5,26 @@
 <link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/main.css' %}">
 <link rel="stylesheet" href="{% static 'css/header.css' %}">
+<!--<link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css">-->
+
 
 <header id="header">
     <div class="navbar navbar-inverse" role="banner">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="{% url 'index'%}">
                     <h1><img src="{% static 'img/logo.png' %}" alt="logo"></h1>
                 </a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="{% url 'index' %}">主页</a></li>
-                    <li><a href="#">在线数据分析<i class="fa fa-angle-down"></i></a>
+                    <li><a href="{% url 'paperAnalyse'%}">在线数据分析</a>
                     </li>
-                    <li><a href="#">论文查找<i class="fa fa-angle-down"></i></a>
+                    <li><a href="#">在线查找</a>
 
                     </li>
-                    <li><a href="{% url 'startSpider' %}">在线爬虫<i class="fa fa-angle-down"></i></a>
+                    <li><a href="{% url 'startSpider' %}">在线爬虫</a>
                     </li>
                 </ul>
             </div>
