--- a/cnki/analyse/templates/analyse/index.html
+++ b/cnki/analyse/templates/analyse/index.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 <title>首页</title>
+{% include "analyse/importCSS.html" %}
 {% include "analyse/header.html" %}
 <section id="home-slider">
     <div class="container">
@@ -122,4 +123,4 @@
 
 
 {% include "analyse/footer.html" %}
-
+{% include "analyse/importJS.html" %}
