--- a/cnki/analyse/templates/analyse/paperAnalyse.html
+++ b/cnki/analyse/templates/analyse/paperAnalyse.html
@@ -1,21 +1,25 @@
 {% load static %}
 
-<title>在线数据分析</title>
+<title>热门分析</title>
+{% include "analyse/importCSS.html" %}
+
 {% include "analyse/header.html" %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.2.1/echarts.common.js">
 <section id="portfolio" class="wow fadeInLeft" data-wow-duration="1000ms">
     <div class="container">
         <div class="row">
             <ul class="portfolio-filter text-center">
-                <li><a class="btn active" href="#" data-filter="*">已有关键词</a></li>
-                <li><a class="btn " href="#" data-filter=".computer">计算机类</a></li>
-                <li><a class="btn " href="#" data-filter=".medicine">医学类</a></li>
-                <li><a class="btn " href="#" data-filter=".education">教育学类</a></li>
-                <li><a class="btn " href="#" data-filter=".economy">经济类</a></li>
-                <li><a class="btn " href="#" data-filter=".physics">物理类</a></li>
-                <li><a class="btn " href="#" data-filter=".medias">传媒类</a></li>
+                <li><a class="btn active" href="#" data-filter="*">用户关键词查询次数汇总排行</a></li>
+                <!--<li><a class="btn " href="#" data-filter=".computer">计算机类</a></li>-->
+                <!--<li><a class="btn " href="#" data-filter=".medicine">医学类</a></li>-->
+                <!--<li><a class="btn " href="#" data-filter=".education">教育学类</a></li>-->
+                <!--<li><a class="btn " href="#" data-filter=".economy">经济类</a></li>-->
+                <!--<li><a class="btn " href="#" data-filter=".physics">物理类</a></li>-->
+                <!--<li><a class="btn " href="#" data-filter=".medias">传媒类</a></li>-->
             </ul><!--/#portfolio-filter-->
 
             <div class="portfolio-items">
+                {% for keyword in keywords%}
                 <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item computer">
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
@@ -24,324 +28,19 @@
                             </div>
                             <div class="portfolio-view">
                                 <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
+                                    <li><a href="">{{keyword.counts}}次</a></li>
                                     <!---->
                                 </ul>
                             </div>
                         </div>
                         <div class="portfolio-info ">
-                            <h2>大数据</h2>
+                            <h2>{{keyword.keyword}}</h2>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item medicine">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/2.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>细菌</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item education">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/3.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>软件</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item economy ">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/4.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>护理</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item physics">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/5.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>美工</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item medias">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/6.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>爬虫</h2>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item computer">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/1.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-                                    <!---->
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>大数据</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item medicine">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/2.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>细菌</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item education">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/3.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>软件</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item economy ">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/4.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>护理</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item physics">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/5.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>美工</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item medias">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/6.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>爬虫</h2>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item computer">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/1.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-                                    <!---->
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>大数据</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item medicine">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/2.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>细菌</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item education">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/3.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>软件</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item economy ">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/4.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>护理</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item physics">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/5.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>美工</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 portfolio-item medias">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="{% static 'img/portfolio/6.jpg' %}" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="">详情</a></li>
-
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>爬虫</h2>
-                        </div>
-                    </div>
-                </div>
-
-
+                {% endfor %}
             </div>
+
 
         </div>
     </div>
@@ -349,4 +48,4 @@
 
 
 {% include "analyse/footer.html" %}
-
+{% include "analyse/importJS.html" %}
