--- a/cnki/analyse/templates/analyse/startSpider.html
+++ b/cnki/analyse/templates/analyse/startSpider.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <title>启动爬虫</title>
-
+{% include "analyse/importCSS.html" %}
 {% include 'analyse/header.html' %}
 <section id="services">
     <div class="container">
